--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,12 +8,15 @@
     <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
+    <string name="male">male</string>
+    <string name="female">female</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_name">Name</string>
     <string name="prompt_password">Password</string>
     <string name="prompt_passwordConfirm">Confirm Password</string>
     <string name="action_sign_in">Sign in</string>
     <string name="action_registration">Register</string>
+    <string name="action_retry">Повторить</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="action_registration_short">Reg</string>
     <string name="error_invalid_email">This email address is invalid</string>
